--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
+<body style="background:#CD5C5C;color:white">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
@@ -22,13 +22,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CityHotel/Index">CityHotel</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CityHotels/Index">City</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Hotels/Index">Hotel</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Hotels/Index">Hotels</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Customer/Index">Customer</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Customers/Index">Customer</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
@@ -45,7 +45,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container" style="color:white">
             &copy; 2021 - WebApplication4 - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
